[package]
name = "cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = {path = "../config" }
clap = "2.33.3"
log = "0.4"
thiserror = "1"
anyhow = "1"
simplelog = "0.12"
tokio = { version = "1" } 
solana-program = "1.9"
solana-sdk = "1.9"
bsolana = {path = "../solana"}
base64 = "0.13"
serde = {version = "1", features = ["derive"]}
bincode = "1.3.1"
serde_json = "1"