[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0.25"
anyhow = "1.0.41"
simplelog = "0.10.0"
log = "0.4.14"
serde_json = "1.0.64"
solana-sdk = "1.10.29"
solana-client = "1.10.29"
solana-remote-wallet = "1.10.29"
solana-clap-utils = "1.10.29"
clap = "2.33.3"
tokio = { version = "1"}